# drift-gate

./: .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_check.py  test_manifest.py
tests/fixtures/bad-consumer/: beta.md
tests/fixtures/good-consumer/: alpha.md  gamma.md
tests/fixtures/source/: baseline-manifest.json  beta.md
tools/baseline/: __init__.py  check.py  cli.py  manifest.py  report.py
