[project]
name = "drift-gate"
version = "0.1.0"
description = "Detect when files in a consumer repo have drifted from a canonical source"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "NWarila" }]
keywords = ["github-actions", "drift", "ci-cd", "quality-gate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.13,<1",
]

[project.scripts]
drift-gate = "baseline.cli:main"

[project.urls]
Source = "https://github.com/NWarila/drift-gate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools/baseline"]

[tool.hatch.build.targets.wheel.sources]
"tools/baseline" = "baseline"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tools"]
